# HarpyEngine

./: .directory  .gitignore  2023-07-14 log№1.txt  2023-07-15 log№1.txt  2023-07-16 log№1.txt  2023-07-19 log№1.txt  2023-07-21 log№1.txt  2023-09-22 log№1.txt  2024-01-03 log№1.txt  BoomBox.gltf  CMakeLists.txt  Conspect.txt  Guidelines.md  HarpyEngine.sln  HarpyEngine.vcxproj  HarpyEngine.vcxproj.filters  HarpyEngineRework.vcxproj  HarpyEngineRework.vcxproj.filters  Main.cpp  Triangle.cpp  a.out  adamHead.gltf  capture_settings.cap  compile_commands.json  drawer.py  glsl_to_spiv.bat  glsl_to_spiv.sh  harpy.cpp  harpy.dataguide  harpy.h  log.txt  out  vulkaninfo.txt
HarpyCodeGen/: HarpyCodeGen.vcxproj
HarpyHumanPart/: HarpyHumanPart.vcxproj  HarpyHumanPart.vcxproj.filters
HarpyHumanPart/human_part/: Note for humans.md
HarpyRavenPart/: HarpyEngineRework.cpp  HarpyRavenPart.vcxproj  HarpyRavenPart.vcxproj.filters  dll_macro.h  dllmain.cpp
HarpyRavenPart/raven_part/3D/: mesh.h
HarpyUtilities/: HarpyUtilities.vcxproj  HarpyUtilities.vcxproj.filters
HarpyUtilities/utilities/: dll_macro.h
HarpyUtilities/utilities/logger/: harpy_little_error.cpp  harpy_little_error.h  logger.cpp  logger.h
HarpyUtilities/utilities/threading/: thread_pool.h  thread_safe_queue.h
HarpyUtilities/utilities/util/: delegate.cpp  delegate.h  util.cpp  util.h
Testing/: 2023-03-08 log.txt  Testing.cpp  Testing.vcxproj  Testing.vcxproj.filters
Testing/utilities/: harpy_little_error.cpp  harpy_little_error.h  initializations.cpp  initializations.hpp
Testing/x64/Debug/: Testing.exe.recipe  Testing.ilk  vc143.idb
external_resources/shaders/glsl/: a.spv  options.hso
external_resources/shaders/hlsl/: shader.vert
gltf_model/: 2CylinderEngine.gltf
human_part/: human_part.h
human_part/ECS/: Component.cpp  Component.h  ECS.h  Entity.cpp  Entity.h
human_part/ECS/components/: Camera.cpp  Camera.h  Renderer.cpp  Renderer.h  Transform.cpp  Transform.h
human_part/GUI/: base_gui_layout.cpp  base_gui_layout.h
human_part/image_processor/: image_processor.cpp  image_processor.h
human_part/sound/: base_sound.cpp  base_sound.h
human_part/sound/formats/: wav.cpp  wav.h
include/HarpyCodeGen/shader/: glsl_generator.hpp
include/HarpyRavenPart/3D/: camera.h  mesh.h  model.h  model_loader.h  renderer.h  uniform_buffer_objects.h
include/HarpyRavenPart/nest/: inititalizations.h
include/HarpyUtilities/: dll_macro.h  utilities_dll_macro.h
materials for developers/: Roadmap till beta RU.md
models_modified/: 2CylinderEngine.gltf
nest/primitive_data_types/: vertex_buffer.cpp
nest/renderer/: renderer.cpp  renderer.hpp
nest/shaders/: base_shader.cpp  base_shader.hpp
nest/threading/: harpy_semaphore.cpp
nest/utilities/: harpy_little_error.h  initializations.hpp  utilities.cpp  utilities.hpp
nest/vision/: base_window.hpp  base_window_layout.hpp  camera.hpp
nest/vision/camera/: camera.cpp
nest/vulkan_levels/: hard_level_vulkan.hpp  medium_level_vulkan.hpp  soft_level_vulkan.hpp
raven_part/: raven_part.cpp  raven_part.h
raven_part/mesh/: mesh.h
raven_part/objects/: base_cube.cpp  base_cube.h  base_object.cpp  base_object.h
raven_part/renderer/: renderer.cpp  renderer.h
raven_part/resource_types/: Material.cpp  Material.h  Object.h  Pipeline.h  Shader.h  Shape.cpp  Shape.h  View.cpp  View.h
shaders/: Renderer Bind Points.txt
src/: CMakeLists.txt
src/HarpyCodeGen/: CMakeLists.txt  main.cpp
src/HarpyCodeGen/cmake/: cmake_generator.cpp  cmake_generator.hpp
src/HarpyCodeGen/cpp_code/: cpp_generator.cpp  cpp_generator.hpp
src/HarpyCodeGen/shader/: glsl_generator.cpp
src/HarpyRavenPart/: CMakeLists.txt  main.cpp
src/HarpyRavenPart/3D/: camera.cpp  mesh.cpp  model.cpp  model_loader.cpp  renderer.cpp
src/HarpyRavenPart/3D/primitive_models/: circle.cpp  cube.cpp  line.cpp  point.cpp  rectangle.cpp  sphere.cpp
src/HarpyRavenPart/nest/: inititalizations.cpp
src/HarpyRavenPart/nest/command_commander/: command_commander.cpp
src/HarpyRavenPart/nest/managers/: queue_manager.cpp  swapchain_manager.cpp
src/HarpyRavenPart/nest/pipeline/: descriptor_factory.cpp  graphics_pipeline.cpp  pipeline_cache.cpp
src/HarpyRavenPart/nest/pipeline/descriptors/: descriptor_allocator.cpp  descriptor_factory.cpp
src/HarpyRavenPart/nest/pools/: command_pool.cpp  descriptor_pool.cpp
src/HarpyRavenPart/nest/resources/: common_vulkan_resource.cpp  depth_image.cpp
src/HarpyRavenPart/nest/shader_works/: glsl_shader_factory.cpp  hlsl_shader_factory.cpp  shader_module.cpp
src/HarpyRavenPart/nest/texturing/: texture.cpp  texture_sampler.cpp
src/HarpyRavenPart/nest/vulkan_threading/: event.cpp  fence.cpp  pipeline_barrier.cpp  semaphor.cpp
src/HarpyRavenPart/nest/windowing/: input_controller.cpp  window.cpp
src/HarpyRavenPart/nest/wrappers/: data_buffer.cpp  queue_family.cpp  render_pass.cpp  swapchain.cpp
src/HarpyRavenPart/nest/wrappers/buffers/: data_buffer.cpp
src/HarpyRavenPart/nest/wrappers/queues/: queue_family.cpp
src/HarpyRavenPart/nest/wrappers/swapchain/: swapchain.cpp
src/HarpyUtilities/: CMakeLists.txt
src/HarpyUtilities/utilities/images/: image.cpp
src/HarpyUtilities/utilities/logger/: harpy_little_error.cpp  logger.cpp
src/HarpyUtilities/utilities/util/: delegate.cpp  util.cpp
src/Testing/: CMakeLists.txt  Testing.cpp
supply/: supply.cpp  supply.h
third_party_services/debug_libs/: OpenAL32.lib  common.lib  ex-common.lib  glfw3.lib  gtest_main.lib  opencv_core470d.lib  opencv_highgui470d.lib  opencv_imgcodecs470d.lib  opencv_imgproc470d.lib  opencv_video470d.lib  opencv_videoio470d.lib
third_party_services/libs/: OpenAL32.lib  common.lib  ex-common.lib  glfw3.lib  gmock.lib  gmock_main.lib  gtest.lib  gtest_main.lib  opencv_core470.lib  opencv_highgui470.lib  opencv_imgcodecs470.lib  opencv_imgproc470.lib  opencv_video470.lib  opencv_videoio470.lib  symbols
x64/Debug/: HarpyEngine.exe.id1  HarpyEngine.exe.id2  HarpyEngine.exe.nam  HarpyEngine.exe.recipe  HarpyEngine.exe.til  HarpyEngine.ilk  HarpyEngine.vcxproj.FileListAbsolute.txt  vc143.idb
(+253 files in other folders)
